--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
       {{ user.xp }} / {{ user.xp_required }} XP<br />
       Add New Task<br />
       <form action="{{ url_for('add_task') }}" method="post">
-        Name: <input type="text" id="name" name="name" />
+        Name: <input type="text" id="name" name="name" /><br />
         <input type="submit" value="Add Task" />
       </form>
       <ul>
