--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <title>Endless Task List App using Flask</title>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/index.css') }}"
+    />
   </head>
   <body>
     <h1>Endless Task List App using Flask</h1>
