--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
       Level {{ user.level }}<br />
       {{ user.xp }} / {{ user.xp_required }} XP<br />
       <div class="progress-container">
+        <!--get current level progress-->
         <progress value="{{ user.xp }}" max="{{ user.xp_required }}"></progress>
         <div class="progress-text">
           {{ user.xp / user.xp_required * 100 | round }}%
@@ -21,13 +22,14 @@
       </div>
       Add New Task<br />
       <form action="{{ url_for('add_task') }}" method="post">
+        <!--form to add task-->
         Name: <input type="text" id="name" name="name" /><br />
         <input type="submit" value="Add Task" />
       </form>
       <ul>
-        {% for task in tasks %}
+        {% for task in tasks %}<!--repeat for each task in task list-->
         <li>{{ task.name }}</li>
-        {% if not task.completed %}
+        {% if not task.completed %}<!--show complete button if task is not completed-->
         <a href="/complete_task/{{ task.id }}">Complete</a>
         {% endif %}
         <a href="/delete_task/{{ task.id }}">Delete</a>
