--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
       Add New Task<br />
       <form action="{{ url_for('add_task') }}" method="post">
         <!--form to add task-->
-        Name: <input type="text" id="name" name="name" /><br />
+        Name: <input type="text" id="name" name="name" required /><br />
         <input type="submit" value="Add Task" />
       </form>
       <ul>
