Add task due date field

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,8 @@
       <form action="{{ url_for('add_task') }}" method="post">
         <!--form to add task-->
         Name: <input type="text" id="name" name="name" required /><br />
+        Due date:
+        <input type="date" id="due_date" name="due_date" required /><br />
         <input type="submit" value="Add Task" />
       </form>
       <ul>
