Add maximum date in due date input field

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,7 @@
           id="due_date"
           name="due_date"
           min="{{ today }}"
+          max="9999-12-31"
           required
         /><br />
         <input type="submit" value="Add Task" />
