--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         <!--get current level progress-->
         <progress value="{{ user.xp }}" max="{{ user.xp_required }}"></progress>
         <div class="progress-text">
-          {{ user.xp / user.xp_required * 100 | short_numeric }}%
+          {{ (user.xp / user.xp_required * 100) | short_numeric }}%
         </div>
       </div>
       Add New Task<br />
