Add priorities in task list

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,12 @@
           max="9999-12-31"
           required
         /><br />
+        Priority:
+        <select id="priority" name="priority">
+          <option value="1">Low</option>
+          <option value="2">Medium</option>
+          <option value="3">High</option>
+        </select>
         <input type="submit" value="Add Task" />
       </form>
       <ul>
