--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,7 @@
           name="due_date"
           min="{{ today }}"
           max="9999-12-31"
+          value="{{ today }}"
           required
         /><br />
         Priority:
