Set default value for input selection

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,13 +44,13 @@
         /><br />
         Priority:
         <select id="priority" name="priority">
-          <option value="1">Low</option>
+          <option value="1" selected>Low</option>
           <option value="2">Medium</option>
           <option value="3">High</option></select
         ><br />
         Difficulty:
         <select id="difficulty" name="difficulty">
-          <option value="1">Easy</option>
+          <option value="1" selected>Easy</option>
           <option value="2">Medium</option>
           <option value="3">Hard</option></select
         ><br />
