--- a/static/css/index.css
+++ b/static/css/index.css
@@ -14,13 +14,30 @@ progress {
     width: 100%;
     max-width: 300px;
 }
-.progress-bar{
+.progress-bar {
     width: 100%;
 }
-.progress-text{
+.progress-text {
     position: absolute;
     width: 100%;
     text-align: center;
     top: 15px;
     color: black;
+}
+.popup-message {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    border: 1px solid #999;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.popup-message p {
+    font-size: 18px;
+    font-weight: bold;
+    color: #333;
 }
