--- a/static/css/index.css
+++ b/static/css/index.css
@@ -25,9 +25,9 @@ progress {
     color: black;
 }
 .popup-message {
-    position: fixed;
-    top: 50%;
-    left: 50%;
+    position: absolute;
+    top: 20px;
+    right: 20px;
     transform: translate(-50%, -50%);
     background-color: #fff;
     border: 1px solid #999;
