Fix form line formatting

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,8 +77,8 @@
           <option value="2">Weekly</option>
           <option value="3">Monthly</option>
           <option value="4">Yearly</option>
-          <option value="5" selected>Once</option>
-        </select>
+          <option value="5" selected>Once</option></select
+        ><br />
         <input type="submit" value="Add Task" />
       </form>
       <ul>
