Add another comment in HTML

--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,10 @@
                     <option value="4">Yearly</option>
                     <option value="5" selected>Once</option></select
                 ><br />
-                <input type="submit" value="Add Task" />
+                <input
+                    type="submit"
+                    value="Add Task"
+                /><!--button to add task-->
             </form>
             <ul>
                 {% for task in tasks %}<!--repeat for each task in task list-->
