Improve more comments

--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
                 <input
                     type="submit"
                     value="Add Task"
-                /><!--button to add task-->
+                /><!--button to add task to task list-->
             </form>
             <ul>
                 {% for task in tasks %}<!--repeat for each task in task list-->
