Add comment for CSS static style link in HTML

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
             rel="stylesheet"
             href="{{ url_for('static', filename='css/index.css') }}"
         />
+        <!--get CSS styles from static site-->
     </head>
     <body>
         <h1>Endless Task List App using Flask</h1>
